--- a/Portfolio/startbootstrap-stylish-portfolio-gh-pages/startbootstrap-stylish-portfolio-gh-pages/index.html
+++ b/Portfolio/startbootstrap-stylish-portfolio-gh-pages/startbootstrap-stylish-portfolio-gh-pages/index.html
@@ -130,22 +130,22 @@
         <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
           <br>
           <span class="service-icon rounded-circle mx-auto mb-3">
-            <i class="icon-screen-smartphone"></i>
+              <i class="fas fa-universal-access"></i>
           </span>
           <h4>
-            <strong>Responsive</strong>
+            <strong>Flexible</strong>
           </h4>
-          <p class="text-faded mb-0">Looks great on any screen size!</p>
+          <p class="text-faded mb-0">I adapt easily!</p>
         </div>
         <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
           <br>
           <span class="service-icon rounded-circle mx-auto mb-3">
-            <i class="icon-pencil"></i>
+              <i class="fab fa-gratipay"></i>
           </span>
           <h4>
-            <strong>Redesigned</strong>
+            <strong>Passionate</strong>
           </h4>
-          <p class="text-faded mb-0">Freshly redesigned for Bootstrap 4.</p>
+          <p class="text-faded mb-0">... about new projects!</p>
         </div>
         <div class="col-lg-3 col-md-6 mb-5 mb-md-0">
           <br>
