--- a/Portfolio/startbootstrap-stylish-portfolio-gh-pages/startbootstrap-stylish-portfolio-gh-pages/index.html
+++ b/Portfolio/startbootstrap-stylish-portfolio-gh-pages/startbootstrap-stylish-portfolio-gh-pages/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Stylish Portfolio - Start Bootstrap Template</title>
+  <title>Sanja Daic</title>
 
   <!-- Bootstrap Core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -34,7 +34,7 @@
   <nav id="sidebar-wrapper">
     <ul class="sidebar-nav">
       <li class="sidebar-brand">
-        <a class="js-scroll-trigger" href="#page-top">Start Bootstrap</a>
+        <a class="js-scroll-trigger" href="#page-top">Sanja Daic</a>
       </li>
       <li class="sidebar-nav-item">
         <a class="js-scroll-trigger" href="#page-top">Home</a>
@@ -43,7 +43,7 @@
         <a class="js-scroll-trigger" href="#about">About</a>
       </li>
       <li class="sidebar-nav-item">
-        <a class="js-scroll-trigger" href="#services">Services</a>
+        <a class="js-scroll-trigger" href="#services">More about me</a>
       </li>
       <li class="sidebar-nav-item">
         <a class="js-scroll-trigger" href="#portfolio">Portfolio</a>
@@ -55,12 +55,14 @@
   </nav>
 
   <!-- Header -->
-  <div class="my-image">
+  <!--
+    <div class="my-image">
     <img src="img/sanja.png" class="rounded-circle img-response" width="44%">
   </div>
+-->
   <header class="masthead d-flex">
     <div class="container text-center my-auto">
-      <h1 class="mb-1">Sanja Daić</h1>
+      <h1 class="mb-1">Sanja Daic</h1>
       <h3 class="mb-5">
         <em>A Free Bootstrap Theme by Start Bootstrap</em>
       </h3>
@@ -107,11 +109,11 @@
           <h4>
             <strong>Very good listener</strong>
           </h4>
-          <p class="text-faded mb-0">Ubaci neki text ovdje</p>
+          <p class="text-faded mb-0">Try me <i class="far fa-grin-wink"></i></p>
         </div>
         <div class="col-lg-3 col-md-6 mb-5 mb-md-0">
           <span class="service-icon rounded-circle mx-auto mb-3">
-              <i class="fas fa-hand-rock"></i>
+            <i class="fas fa-hand-rock"></i>
           </span>
           <h4>
             <strong>Motivated</strong>
@@ -127,38 +129,37 @@
           </h4>
           <p class="text-faded mb-0">All for one and one for all.</p>
         </div>
-        <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
+        <div class="col-md-4">
           <br>
           <span class="service-icon rounded-circle mx-auto mb-3">
-              <i class="fas fa-universal-access"></i>
+            <i class="fas fa-universal-access"></i>
           </span>
           <h4>
             <strong>Flexible</strong>
           </h4>
           <p class="text-faded mb-0">I adapt easily!</p>
         </div>
-        <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
+        <div class="col-md-4">
           <br>
           <span class="service-icon rounded-circle mx-auto mb-3">
-              <i class="fab fa-gratipay"></i>
+            <i class="fab fa-gratipay"></i>
           </span>
           <h4>
             <strong>Passionate</strong>
           </h4>
           <p class="text-faded mb-0">... about new projects!</p>
         </div>
-        <div class="col-lg-3 col-md-6 mb-5 mb-md-0">
+        <div class="col-md-4">
           <br>
           <span class="service-icon rounded-circle mx-auto mb-3">
             <i class="icon-like"></i>
           </span>
           <h4>
-            <strong>Favorited</strong>
+            <strong>Funny</strong>
           </h4>
-          <p class="text-faded mb-0">Millions of users
-            <i class="fas fa-heart"></i>
-            Start Bootstrap!</p>
+          <p class="text-faded mb-0">I <i class="fas fa-heart"></i> good joke!</p>
         </div>
+        <!--
         <div class="col-lg-3 col-md-6">
           <br>
           <span class="service-icon rounded-circle mx-auto mb-3">
@@ -169,6 +170,7 @@
           </h4>
           <p class="text-faded mb-0">I mustache you a question...</p>
         </div>
+        -->
       </div>
     </div>
   </section>
