--- a/Portfolio/startbootstrap-stylish-portfolio-gh-pages/startbootstrap-stylish-portfolio-gh-pages/index.html
+++ b/Portfolio/startbootstrap-stylish-portfolio-gh-pages/startbootstrap-stylish-portfolio-gh-pages/index.html
@@ -177,6 +177,31 @@
 
   <!-- Callout -->
   <section class="callout">
+
+<div class="container">
+    <div class="row">
+      <div class="col-sm-6">
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">Special title treatment</h5>
+            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-6">
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">Special title treatment</h5>
+            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+    <!--
     <div class="container text-center">
       <h2 class="mx-auto mb-5">Welcome to
         <em>your</em>
@@ -184,6 +209,7 @@
       <a class="btn btn-primary btn-xl" href="https://startbootstrap.com/template-overviews/stylish-portfolio/">Download
         Now!</a>
     </div>
+    -->
   </section>
 
   <!-- Portfolio -->
