--- a/Portfolio/startbootstrap-stylish-portfolio-gh-pages/startbootstrap-stylish-portfolio-gh-pages/index.html
+++ b/Portfolio/startbootstrap-stylish-portfolio-gh-pages/startbootstrap-stylish-portfolio-gh-pages/index.html
@@ -64,7 +64,7 @@
     <div class="container text-center my-auto">
       <h1 class="mb-1">Sanja Daic</h1>
       <h3 class="mb-5">
-        <em>A Free Bootstrap Theme by Start Bootstrap</em>
+        <em>Self-learning frontend Junior</em>
       </h3>
       <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More</a>
     </div>
@@ -79,7 +79,8 @@
           <h2>I am in <i class="fas fa-heart"></i> with coding!</h2>
           <p class="lead mb-5">I am self-thought and so far, I worked on a couple of projects which I will gladly share
             the details with you (as far as NDA allows me)!</p>
-          <a class="btn btn-dark btn-xl js-scroll-trigger" href="#services">More About Me</a>
+          <a class="btn btn-color btn-lg js-scroll-trigger" href="#services">More About Me <i
+              class="fas fa-chevron-circle-down"></i></a>
         </div>
       </div>
     </div>
@@ -177,29 +178,77 @@
 
   <!-- Callout -->
   <section class="callout">
-
-<div class="container">
-    <div class="row">
-      <div class="col-sm-6">
-        <div class="card">
+    <div class="container">
+      <div class="card-group">
+        <div class="card card-a">
           <div class="card-body">
-            <h5 class="card-title">Special title treatment</h5>
-            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <h4 class="card-title">Education</h4>
+            <p class="card-text"><strong>I graduated from the Faculty of Economics, but I want to make a career
+                change.</strong></p>
           </div>
         </div>
-      </div>
-      <div class="col-sm-6">
-        <div class="card">
+        &nbsp;
+        <div class="card card-b">
           <div class="card-body">
-            <h5 class="card-title">Special title treatment</h5>
-            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <h4 class="card-title">Individual learning</h4>
+            <p class="card-text"><strong>I learned everything by myself.</strong></p>
+          </div>
+        </div>
+        &nbsp;
+        <div class="card card-c">
+          <div class="card-body">
+            <h4 class="card-title">What do I know?</h4>
+            <p class="card-text"><strong>
+                <ul>
+                  <li>I speak German</li>
+                  <li>I speak English</li>
+                  <li>HTML</li>
+                  <li>CSS</li>
+                  <li>Bootstrap</li>
+                  <li>JavaScript (have to learn more)</li>
+                </ul>
+
+              </strong></p>
           </div>
         </div>
       </div>
     </div>
-  </div>
+    <br><br><br><br>
+    <div class="container text-center">
+      <div class="row">
+        <div class="col-lg-10 mx-auto">
+          <a class="btn btn-lg js-scroll-trigger btn-color" href="#portfolio">Where I Worked <i
+              class="fas fa-chevron-circle-down"></i></a>
+        </div>
+      </div>
+    </div>
+    <!--
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-4">
+          <div class="card text-white bg-success mb-3">
+            <div class="card-body">
+              <h5 class="card-title">Education</h5>
+              <p class="card-text">I graduated from the Faculty of Economics, but I want to make a career change.</p>
+            </div>
+          </div>
+        
+        <div class="card text-white bg-success mb-3">
+          <div class="card-body">
+            <h5 class="card-title">Education</h5>
+            <p class="card-text">I graduated from the Faculty of Economics, but I want to make a career change.</p>
+          </div>
+        </div>
+        <div class="card text-white bg-success mb-3">
+          <div class="card-body">
+            <h5 class="card-title">Education</h5>
+            <p class="card-text">I graduated from the Faculty of Economics, but I want to make a career change.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    </div>
+-->
 
     <!--
     <div class="container text-center">
@@ -224,8 +273,22 @@
           <a class="portfolio-item" href="#">
             <span class="caption">
               <span class="caption-content">
-                <h2>Stationary</h2>
-                <p class="mb-0">A yellow pencil with envelopes on a clean, blue backdrop!</p>
+                <span class="text-center"><h3>Comtrade Distribution</h3></span>
+                <ul>
+                  <span class="li-font">
+                    <li>Managed all marketing related operations in a company with 70Mil/BAM annual turnover.</li>
+                    <li>During that period, marketing related income has been increased by 27% year vs. year</li>
+                    <li>Managed marketing side of business with 30+ top IT vendors.</li>
+                    <li>Planned, budgeted and executed several complex vendor multi-day events.</li>
+                    <li>Daily based communication with retail partner network (over 100 accounts) in order to recognise,
+                      integrate into vendor plans and execute specifically tailored marketing actions such as promotion,
+                      POS material creation and leaflet and catalogue communication.</li>
+                    <li>Analyzed and reported back to company management and vendors, key aspects of executed
+                      marketing actions such as: positioning of products, sales increase, possible cross/sales, product
+                      portfolio and total return of investment.</li>
+                    <li>Managed small merchandiser team.</li>
+                  </span>
+                </ul>
               </span>
             </span>
             <img class="img-fluid" src="img/portfolio-1.jpg" alt="">
