--- a/Portfolio/startbootstrap-stylish-portfolio-gh-pages/startbootstrap-stylish-portfolio-gh-pages/index.html
+++ b/Portfolio/startbootstrap-stylish-portfolio-gh-pages/startbootstrap-stylish-portfolio-gh-pages/index.html
@@ -273,7 +273,51 @@
           <a class="portfolio-item" href="#">
             <span class="caption">
               <span class="caption-content">
-                <span class="text-center"><h3>Comtrade Distribution</h3></span>
+                <span class="text-center">
+                  <h3>App Impact</h3>
+                </span>
+                <ul>
+                  <span class="li-font">
+                    <li>Web development, HTML and CSS</li>
+                    <li>Simple c# task's</li>
+                    <li>Used Bootstrap for web projects on daily bases</li>
+                    <li>Adopted custom event management platform</li>
+                  </span>
+                </ul>
+              </span>
+            </span>
+            <img class="img-fluid" src="img/portfolio-1.jpg" alt="">
+          </a>
+        </div>
+        <div class="col-lg-6">
+          <a class="portfolio-item" href="#">
+            <span class="caption">
+              <span class="caption-content">
+                <span class="text-center">
+                  <h3>Mikrografija</h3>
+                </span>
+                <ul>
+                  <span class="li-font">
+                    <li>I maintained two web sites micrografija.ba and skeneri.ba</li>
+                    <li>Prepared and made offers and invoices.</li>
+                    <li>I led the project at the Court East Sarajevo and managed workers.</li>
+                    <li>Budgeted, planned and implemented several complex conferences.</li>
+                    <li>Responsible for selling Fujitsu scanners and communicating with the vendor</li>
+                    <li>Office Management</li>
+                  </span>
+                </ul>
+              </span>
+            </span>
+            <img class="img-fluid" src="img/portfolio-2.jpg" alt="">
+          </a>
+        </div>
+        <div class="col-lg-6">
+          <a class="portfolio-item" href="#">
+            <span class="caption">
+              <span class="caption-content">
+                <span class="text-center">
+                  <h3>Comtrade Distribution</h3>
+                </span>
                 <ul>
                   <span class="li-font">
                     <li>Managed all marketing related operations in a company with 70Mil/BAM annual turnover.</li>
@@ -291,28 +335,6 @@
                 </ul>
               </span>
             </span>
-            <img class="img-fluid" src="img/portfolio-1.jpg" alt="">
-          </a>
-        </div>
-        <div class="col-lg-6">
-          <a class="portfolio-item" href="#">
-            <span class="caption">
-              <span class="caption-content">
-                <h2>Ice Cream</h2>
-                <p class="mb-0">A dark blue background with a colored pencil, a clip, and a tiny ice cream cone!</p>
-              </span>
-            </span>
-            <img class="img-fluid" src="img/portfolio-2.jpg" alt="">
-          </a>
-        </div>
-        <div class="col-lg-6">
-          <a class="portfolio-item" href="#">
-            <span class="caption">
-              <span class="caption-content">
-                <h2>Strawberries</h2>
-                <p class="mb-0">Strawberries are such a tasty snack, especially with a little sugar on top!</p>
-              </span>
-            </span>
             <img class="img-fluid" src="img/portfolio-3.jpg" alt="">
           </a>
         </div>
@@ -320,8 +342,16 @@
           <a class="portfolio-item" href="#">
             <span class="caption">
               <span class="caption-content">
-                <h2>Workspace</h2>
-                <p class="mb-0">A yellow workspace with some scissors, pencils, and other objects.</p>
+                <span class="text-center">
+                  <h3>Mareco Index Bosnia</h3>
+                </span>
+                <ul>
+                  <span class="li-font">
+                    <li>Press/TV Monitoring – TV monitoring quality assurance/supervision for the team of 8 marketing
+                      operators.</li>
+                    <li>Press and media clipping, sorting and archiving.</li>
+                  </span>
+                </ul>
               </span>
             </span>
             <img class="img-fluid" src="img/portfolio-4.jpg" alt="">
