Changes on Projects

--- a/Portfolio/startbootstrap-stylish-portfolio-gh-pages/startbootstrap-stylish-portfolio-gh-pages/index.html
+++ b/Portfolio/startbootstrap-stylish-portfolio-gh-pages/startbootstrap-stylish-portfolio-gh-pages/index.html
@@ -320,17 +320,16 @@
                 </span>
                 <ul>
                   <span class="li-font">
-                    <li>Managed all marketing related operations in a company with 70Mil/BAM annual turnover.</li>
+                    <li>Managed all marketing related operations in a company with 35Mil/EUR annual turnover.</li>
                     <li>During that period, marketing related income has been increased by 27% year vs. year</li>
                     <li>Managed marketing side of business with 30+ top IT vendors.</li>
                     <li>Planned, budgeted and executed several complex vendor multi-day events.</li>
                     <li>Daily based communication with retail partner network (over 100 accounts) in order to recognise,
                       integrate into vendor plans and execute specifically tailored marketing actions such as promotion,
-                      POS material creation and leaflet and catalogue communication.</li>
-                    <li>Analyzed and reported back to company management and vendors, key aspects of executed
-                      marketing actions such as: positioning of products, sales increase, possible cross/sales, product
+                      POS material creation, leaflet and catalogue communication.</li>
+                    <li>Analyzed and reported back to management and vendors, key aspects of executed
+                      marketing actions: positioning of products, sales increase, possible cross/sales, product
                       portfolio and total return of investment.</li>
-                    <li>Managed small merchandiser team.</li>
                   </span>
                 </ul>
               </span>
