Editing cards and map

--- a/Portfolio/startbootstrap-stylish-portfolio-gh-pages/startbootstrap-stylish-portfolio-gh-pages/index.html
+++ b/Portfolio/startbootstrap-stylish-portfolio-gh-pages/startbootstrap-stylish-portfolio-gh-pages/index.html
@@ -180,7 +180,7 @@
   <section class="callout">
     <div class="container">
       <div class="card-group">
-        <div class="card card-a">
+        <div class="card shadow bg card-a">
           <div class="card-body">
             <h4 class="card-title">Education</h4>
             <p class="card-text"><strong>I graduated from the Faculty of Economics, but I want to make a career
@@ -188,26 +188,25 @@
           </div>
         </div>
         &nbsp;
-        <div class="card card-b">
+        <div class="card shadow bg card-b">
           <div class="card-body">
             <h4 class="card-title">Individual learning</h4>
             <p class="card-text"><strong>I learned everything by myself.</strong></p>
           </div>
         </div>
         &nbsp;
-        <div class="card card-c">
+        <div class="card shadow bg card-c">
           <div class="card-body">
             <h4 class="card-title">What do I know?</h4>
             <p class="card-text"><strong>
                 <ul>
-                  <li>I speak German</li>
+                  <li>I speak German and English</li>
                   <li>I speak English</li>
                   <li>HTML</li>
                   <li>CSS</li>
                   <li>Bootstrap</li>
                   <li>JavaScript (have to learn more)</li>
                 </ul>
-
               </strong></p>
           </div>
         </div>
@@ -372,11 +371,11 @@
   <!-- Map -->
   <section id="contact" class="map">
     <iframe width="100%" height="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"
-      src="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;aq=0&amp;oq=twitter&amp;sll=28.659344,-81.187888&amp;sspn=0.128789,0.264187&amp;ie=UTF8&amp;hq=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;t=m&amp;z=15&amp;iwloc=A&amp;output=embed"></iframe>
+      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d9360.305706758802!2d15.948206011192108!3d45.77448615636722!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4765d425980cb19d%3A0x18b3eba6ee1e49ea!2sLani%C5%A1te%2C%2010000%2C%20Zagreb!5e0!3m2!1shr!2shr!4v1599742492687!5m2!1shr!2shr"></iframe>
     <br />
     <small>
       <a
-        href="https://maps.google.com/maps?f=q&amp;source=embed&amp;hl=en&amp;geocode=&amp;q=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;aq=0&amp;oq=twitter&amp;sll=28.659344,-81.187888&amp;sspn=0.128789,0.264187&amp;ie=UTF8&amp;hq=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;t=m&amp;z=15&amp;iwloc=A"></a>
+        href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d9360.305706758802!2d15.948206011192108!3d45.77448615636722!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4765d425980cb19d%3A0x18b3eba6ee1e49ea!2sLani%C5%A1te%2C%2010000%2C%20Zagreb!5e0!3m2!1shr!2shr!4v1599742492687!5m2!1shr!2shr&amp;iwloc=A"></a>
     </small>
   </section>
 
