--- a/Portfolio/startbootstrap-stylish-portfolio-gh-pages/startbootstrap-stylish-portfolio-gh-pages/index.html
+++ b/Portfolio/startbootstrap-stylish-portfolio-gh-pages/startbootstrap-stylish-portfolio-gh-pages/index.html
@@ -201,7 +201,6 @@
             <p class="card-text"><strong>
                 <ul>
                   <li>I speak German and English</li>
-                  <li>I speak English</li>
                   <li>HTML</li>
                   <li>CSS</li>
                   <li>Bootstrap</li>
@@ -318,7 +317,7 @@
                   <h3>Comtrade Distribution</h3>
                 </span>
                 <ul>
-                  <span class="li-font">
+                  <span class="li-font comtrade-scroll">
                     <li>Managed all marketing related operations in a company with 35Mil/EUR annual turnover.</li>
                     <li>During that period, marketing related income has been increased by 27% year vs. year</li>
                     <li>Managed marketing side of business with 30+ top IT vendors.</li>
@@ -362,9 +361,15 @@
   <!-- Call to Action -->
   <section class="content-section bg-primary text-white">
     <div class="container text-center">
-      <h2 class="mb-4">The buttons below are impossible to resist...</h2>
-      <a href="#" class="btn btn-xl btn-light mr-4">Click Me!</a>
-      <a href="#" class="btn btn-xl btn-dark">Look at Me!</a>
+      <h2 class="mb-4">Here is where I live</h2>
+      <div class="container text-center">
+        <div class="row">
+          <div class="col-lg-10 mx-auto">
+            <a class="btn btn-lg js-scroll-trigger btn-color" href="#contact">Click Me! <i class="fas fa-chevron-circle-down"></i></a>
+          </div>
+        </div>
+      </div>
+      <!-- <a href="#" class="btn btn-xl btn-dark">Look at Me!</a> -->
     </div>
   </section>
 
@@ -384,22 +389,22 @@
     <div class="container">
       <ul class="list-inline mb-5">
         <li class="list-inline-item">
-          <a class="social-link rounded-circle text-white mr-3" href="#">
+          <a target="_blank" class="social-link rounded-circle text-white mr-3" href="https://www.facebook.com/sanja.daic86">
             <i class="icon-social-facebook"></i>
           </a>
         </li>
         <li class="list-inline-item">
-          <a class="social-link rounded-circle text-white mr-3" href="#">
-            <i class="icon-social-twitter"></i>
+          <a target="_blink" class="social-link rounded-circle text-white mr-3" href="https://www.linkedin.com/in/sanja-daic-95a41970/">
+            <i class="icon-social-linkedin"></i>
           </a>
         </li>
         <li class="list-inline-item">
-          <a class="social-link rounded-circle text-white" href="#">
+          <a target="_blank" class="social-link rounded-circle text-white" href="https://github.com/Chupacabra44">
             <i class="icon-social-github"></i>
           </a>
         </li>
       </ul>
-      <p class="text-muted small mb-0">Copyright &copy; Your Website 2019</p>
+      <p class="text-muted small mb-0">Copyright &copy; by Sanja Daic 2020</p>
     </div>
   </footer>
 
