--- a/Portfolio/startbootstrap-stylish-portfolio-gh-pages/startbootstrap-stylish-portfolio-gh-pages/index.html
+++ b/Portfolio/startbootstrap-stylish-portfolio-gh-pages/startbootstrap-stylish-portfolio-gh-pages/index.html
@@ -317,7 +317,7 @@
                   <h3>Comtrade Distribution</h3>
                 </span>
                 <ul>
-                  <span class="li-font comtrade-scroll">
+                  <span class="li-font comtrade-resize">
                     <li>Managed all marketing related operations in a company with 35Mil/EUR annual turnover.</li>
                     <li>During that period, marketing related income has been increased by 27% year vs. year</li>
                     <li>Managed marketing side of business with 30+ top IT vendors.</li>
